--- a/index.html
+++ b/index.html
@@ -5,3 +5,14 @@
         <title>
     <head>     
 </html>
+
+<body>
+    <h1> This is my portfolio! </h1>
+    <h2>
+        <ol>
+            <li>Soundboard</li>
+            <li>Clicker game</li>
+        </ol>
+    </h2>
+    </body>
+</html>     
