--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
         <title>
             chloes portfolio
         <title>
+            <link rel="stylesheet" href="styles.css"
     <head>     
 </html>
 
 <body>
     <h1> This is my portfolio! </h1>
     <h2>
-        <ol>
+    <ol>
             <li>Soundboard</li>
             <li>Clicker game</li>
         </ol>
