--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <html>
-    <head>
-        <title>
-            chloes portfolio
-        <title>
-            <link rel="stylesheet" href="styles.css"
-    <head>     
-</html>
-
-<body>
-    <h1> This is my portfolio! </h1>
-    <h2>
+  <head>
+    <title>Chloe's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <h1>This is my portfolio!</h1>
+    <h2>Projects:</h2>
     <ol>
-            <li>Soundboard</li>
-            <li>Clicker game</li>
-        </ol>
-    </h2>
-    </body>
-</html>     
+      <li>Soundboard</li>
+      <li>Clicker game</li>
+    </ol>
+  </body>
+</html>
